--- a/config/qihoo_360v6/qihoo_360v6_basic.config
+++ b/config/qihoo_360v6/qihoo_360v6_basic.config
@@ -115,6 +115,7 @@ CONFIG_PACKAGE_libuuid=y
 CONFIG_PACKAGE_libyaml=y
 CONFIG_PACKAGE_lua-neturl=y
 CONFIG_PACKAGE_luci-app-autoreboot=y
+CONFIG_PACKAGE_luci-app-alist=y
 # CONFIG_PACKAGE_luci-app-aliyundrive-webdav is not set
 CONFIG_PACKAGE_luci-app-bypass=y
 CONFIG_PACKAGE_luci-app-bypass_INCLUDE_Shadowsocks_Libev_Client=y
