--- a/.github/workflows/ipq6000_5.15.yml
+++ b/.github/workflows/ipq6000_5.15.yml
@@ -20,12 +20,12 @@ on:
         default: 'false'
 
 env:
-  REPO_URL: https://github.com/hanwckf/immortalwrt-mt798x.git
-  REPO_BRANCH: openwrt-21.02
+  REPO_URL: https://github.com/sdf8057/openwrt
+  REPO_BRANCH: ipq6000
   FEEDS_CONF: feeds.conf.default
-  CONFIG_FILE: ./config/redmi_ax6000/redmi_ax6000_hanwckf.config
-  DIY_P1_SH: ./custom/redmi_ax6000/hanwckf/diy-part1.sh
-  DIY_P2_SH: ./custom/redmi_ax6000/hanwckf/diy-part2.sh
+  CONFIG_FILE: pro.config
+  DIY_P1_SH: ./custom/cmiot_ax18/basic/diy-part1.sh
+  DIY_P2_SH: ./custom/cmiot_ax18/basic/diy-part2.sh
   UPLOAD_BIN_DIR: false
   UPLOAD_FIRMWARE: true
   UPLOAD_COWTRANSFER: false
