--- a/.github/workflows/ipq6000_5.15.yml
+++ b/.github/workflows/ipq6000_5.15.yml
@@ -8,7 +8,7 @@
 # Description: Build OpenWrt using GitHub Actions
 #
 
-name: redmi_ax6000_hanwckf
+name: ipq6000_5.15
 
 on:
   repository_dispatch:
