--- a/.github/workflows/ipq6000_5.15.yml
+++ b/.github/workflows/ipq6000_5.15.yml
@@ -122,7 +122,7 @@ jobs:
       if: env.UPLOAD_FIRMWARE == 'true' && !cancelled()
       run: |
         cd openwrt/bin/targets/*/*
-        rm -rf packages profiles.json sha256sums version.buildinfo immortalwrt-ipq60xx-generic-cmiot_ax18-initramfs-fit-uImage.itb
+        rm -rf packages profiles.json sha256sums version.buildinfo immortalwrt-ipq60xx-generic-cmiot_ax18-initramfs-fit-uImage.itb immortalwrt-ipq60xx-generic-cmiot_ax18.manifest 
         echo "FIRMWARE=$PWD" >> $GITHUB_ENV
         echo "status=success" >>$GITHUB_OUTPUT
 
