--- a/config/cmiot_ax18/360_t7_basic.config
+++ b/config/cmiot_ax18/360_t7_basic.config
@@ -60,7 +60,7 @@ CONFIG_TARGET_MULTI_PROFILE=y
 # CONFIG_TARGET_mediatek_mt7981_DEVICE_mt7981-fpga-emmc is not set
 # CONFIG_TARGET_mediatek_mt7981_DEVICE_mt7981-fpga-sd is not set
 # CONFIG_TARGET_mediatek_mt7981_DEVICE_mt7981-360-t7 is not set
-# CONFIG_TARGET_mediatek_mt7981_DEVICE_mt7981-360-t7-108M is not set
+CONFIG_TARGET_mediatek_mt7981_DEVICE_mt7981-360-t7-108M=y
 
 #
 # Target Devices
